[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/Select.gd" type="Script" id=1]
[ext_resource path="res://images/Stage1.jpg" type="Texture" id=2]
[ext_resource path="res://images/Stage2.jpg" type="Texture" id=3]
[ext_resource path="res://images/Stage3.jpg" type="Texture" id=4]
[ext_resource path="res://themes/text_theme.tres" type="Theme" id=5]
[ext_resource path="res://themes/gold_button_theme.tres" type="Theme" id=6]
[ext_resource path="res://fonts/title.tres" type="DynamicFont" id=7]
[ext_resource path="res://images/stage4.jpg" type="Texture" id=8]

[node name="Select" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="IntroBack" type="ColorRect" parent="."]
margin_right = 1270.0
margin_bottom = 720.0
color = Color( 0, 0, 0, 0.588235 )

[node name="Panel" type="Panel" parent="IntroBack"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -635.0
margin_top = -360.0
margin_right = 637.0
margin_bottom = 360.0
theme = ExtResource( 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="IntroBack/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -558.0
margin_top = -345.5
margin_right = 558.0
margin_bottom = 345.5
custom_constants/separation = 20

[node name="Title" type="Label" parent="IntroBack/Panel/VBoxContainer"]
margin_right = 1116.0
margin_bottom = 44.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 7 )
text = "SELECT"
align = 1

[node name="GridContainer" type="GridContainer" parent="IntroBack/Panel/VBoxContainer"]
margin_top = 64.0
margin_right = 1116.0
margin_bottom = 658.0
rect_pivot_offset = Vector2( -73, 155 )
custom_constants/vseparation = 50
custom_constants/hseparation = 100
columns = 2

[node name="VBoxContainer" type="VBoxContainer" parent="IntroBack/Panel/VBoxContainer/GridContainer"]
margin_right = 508.0
margin_bottom = 272.0
custom_constants/separation = 10

[node name="TextureRect" type="TextureRect" parent="IntroBack/Panel/VBoxContainer/GridContainer/VBoxContainer"]
margin_right = 508.0
margin_bottom = 216.0
rect_min_size = Vector2( 508, 216 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 2 )
expand = true

[node name="Button" type="Button" parent="IntroBack/Panel/VBoxContainer/GridContainer/VBoxContainer"]
margin_left = 192.0
margin_top = 226.0
margin_right = 316.0
margin_bottom = 272.0
rect_min_size = Vector2( 124, 46 )
size_flags_horizontal = 4
size_flags_vertical = 0
theme = ExtResource( 6 )
text = "STAGE1"
expand_icon = true

[node name="VBoxContainer2" type="VBoxContainer" parent="IntroBack/Panel/VBoxContainer/GridContainer"]
margin_left = 608.0
margin_right = 1116.0
margin_bottom = 272.0
custom_constants/separation = 10

[node name="TextureRect" type="TextureRect" parent="IntroBack/Panel/VBoxContainer/GridContainer/VBoxContainer2"]
margin_right = 508.0
margin_bottom = 216.0
rect_min_size = Vector2( 508, 216 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 3 )
expand = true

[node name="Button" type="Button" parent="IntroBack/Panel/VBoxContainer/GridContainer/VBoxContainer2"]
margin_left = 192.0
margin_top = 226.0
margin_right = 316.0
margin_bottom = 272.0
rect_min_size = Vector2( 124, 46 )
size_flags_horizontal = 4
size_flags_vertical = 0
theme = ExtResource( 6 )
text = "STAGE2"
expand_icon = true

[node name="VBoxContainer3" type="VBoxContainer" parent="IntroBack/Panel/VBoxContainer/GridContainer"]
margin_top = 322.0
margin_right = 508.0
margin_bottom = 594.0
custom_constants/separation = 10

[node name="TextureRect" type="TextureRect" parent="IntroBack/Panel/VBoxContainer/GridContainer/VBoxContainer3"]
margin_right = 508.0
margin_bottom = 216.0
rect_min_size = Vector2( 508, 216 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 4 )
expand = true

[node name="Button" type="Button" parent="IntroBack/Panel/VBoxContainer/GridContainer/VBoxContainer3"]
margin_left = 192.0
margin_top = 226.0
margin_right = 316.0
margin_bottom = 272.0
rect_min_size = Vector2( 124, 46 )
size_flags_horizontal = 4
size_flags_vertical = 0
theme = ExtResource( 6 )
text = "STAGE3"
expand_icon = true

[node name="VBoxContainer4" type="VBoxContainer" parent="IntroBack/Panel/VBoxContainer/GridContainer"]
margin_left = 608.0
margin_top = 322.0
margin_right = 1116.0
margin_bottom = 594.0
custom_constants/separation = 10

[node name="TextureRect" type="TextureRect" parent="IntroBack/Panel/VBoxContainer/GridContainer/VBoxContainer4"]
margin_right = 508.0
margin_bottom = 216.0
rect_min_size = Vector2( 508, 216 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 8 )
expand = true

[node name="Button" type="Button" parent="IntroBack/Panel/VBoxContainer/GridContainer/VBoxContainer4"]
margin_left = 192.0
margin_top = 226.0
margin_right = 316.0
margin_bottom = 272.0
rect_min_size = Vector2( 124, 46 )
size_flags_horizontal = 4
size_flags_vertical = 0
theme = ExtResource( 6 )
text = "BACK"
expand_icon = true

[connection signal="pressed" from="IntroBack/Panel/VBoxContainer/GridContainer/VBoxContainer/Button" to="." method="_on_Button1_pressed"]
[connection signal="pressed" from="IntroBack/Panel/VBoxContainer/GridContainer/VBoxContainer2/Button" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="IntroBack/Panel/VBoxContainer/GridContainer/VBoxContainer3/Button" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="IntroBack/Panel/VBoxContainer/GridContainer/VBoxContainer4/Button" to="." method="_on_Button4_pressed"]
